--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,14 @@ services:
       MYSQL_PASSWORD: ${DB_PWD}
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PWD}
 
+  flyway:
+    image: flyway/flyway:7.5
+    command: -url=jdbc:mysql://${DB_HOST}/${DB_NAME} -user=${DB_USER} -password=${DB_PWD} -connectRetries=60 -baselineOnMigrate=true migrate
+    volumes:
+      - ./flyway/migrations:/flyway/sql
+    depends_on:
+      - db
+
   api:
     image: afterlogic/mysql-learning_api
     build:
